# vpn_bot

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_vpn_alert_flags.py  0003_bot_settings.py
app/: main.py
app/bot/: router.py
app/bot/handlers/: admin.py  billing.py  help.py  menu.py  profile.py  start.py
app/bot/keyboards/: user.py
app/bot/middlewares/: admin.py
app/core/: config.py
app/db/: models.py
app/db/repositories/: bot_settings.py  subscriptions.py  users.py  vpn_accounts.py
app/services/: config_builder.py  notification_service.py  vpn_service.py  xui_client.py
scripts/: deploy.sh
vpn_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
