[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-bot"
version = "0.1.0"
description = "Telegram bot for issuing VPN configs via 3x-ui"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10.0,<4.0.0",
    "alembic>=1.13.2,<2.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "greenlet>=3.0.3,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.8.2,<3.0.0",
    "pydantic-settings>=2.3.4,<3.0.0",
    "SQLAlchemy>=2.0.31,<3.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.alembic]
script_location = "alembic"
